repo clean and readme update